commit translated contents

--- a/docs/docs-ref-autogen/excel_online/toc.yml
+++ b/docs/docs-ref-autogen/excel_online/toc.yml
@@ -9,6 +9,15 @@ items:
           - name: 自定义函数
             uid: ''
             items:
+              - name: 自定义函数运行时
+                uid: custom-functions-runtime!
+                items:
+                  - name: CancelableInvocation
+                    uid: 'custom-functions-runtime!CustomFunctions.CancelableInvocation:interface'
+                  - name: 调用
+                    uid: 'custom-functions-runtime!CustomFunctions.Invocation:interface'
+                  - name: StreamingInvocation
+                    uid: 'custom-functions-runtime!CustomFunctions.StreamingInvocation:interface'
               - name: Office 运行时
                 uid: office-runtime!
                 items:
@@ -608,7 +617,7 @@ items:
             uid: 'excel!Excel.Image:class'
           - name: IterativeCalculation
             uid: 'excel!Excel.IterativeCalculation:class'
-          - name: Line
+          - name: 折线图
             uid: 'excel!Excel.Line:class'
           - name: ListDataValidation
             uid: 'excel!Excel.ListDataValidation:interface'
@@ -837,7 +846,7 @@ items:
       - name: 通用 API
         uid: office!
         items:
-          - name: 办公室
+          - name: Office
             items:
               - name: 枚举
                 uid: ''
