--- a/docs/docs-ref-autogen/visio/toc.yml
+++ b/docs/docs-ref-autogen/visio/toc.yml
@@ -6,36 +6,41 @@ items:
       - name: Visio
         uid: visio!
         items:
+          - name: 枚举
+            uid: ''
+            items:
+              - name: ErrorCodes
+                uid: 'visio!Visio.ErrorCodes:enum'
+              - name: OverlayHorizontalAlignment
+                uid: 'visio!Visio.OverlayHorizontalAlignment:enum'
+              - name: OverlayType
+                uid: 'visio!Visio.OverlayType:enum'
+              - name: OverlayVerticalAlignment
+                uid: 'visio!Visio.OverlayVerticalAlignment:enum'
+              - name: ToolBarType
+                uid: 'visio!Visio.ToolBarType:enum'
           - name: 应用程序
             uid: 'visio!Visio.Application:class'
           - name: BoundingBox
             uid: 'visio!Visio.BoundingBox:interface'
-          - name: Comment
+          - name: 评论
             uid: 'visio!Visio.Comment:class'
           - name: CommentCollection
             uid: 'visio!Visio.CommentCollection:class'
           - name: DataRefreshCompleteEventArgs
             uid: 'visio!Visio.DataRefreshCompleteEventArgs:interface'
-          - name: Document
+          - name: 文档
             uid: 'visio!Visio.Document:class'
           - name: DocumentLoadCompleteEventArgs
             uid: 'visio!Visio.DocumentLoadCompleteEventArgs:interface'
           - name: DocumentView
             uid: 'visio!Visio.DocumentView:class'
-          - name: ErrorCodes
-            uid: 'visio!Visio.ErrorCodes:enum'
           - name: Highlight
             uid: 'visio!Visio.Highlight:interface'
           - name: 超链接
             uid: 'visio!Visio.Hyperlink:class'
           - name: HyperlinkCollection
             uid: 'visio!Visio.HyperlinkCollection:class'
-          - name: OverlayHorizontalAlignment
-            uid: 'visio!Visio.OverlayHorizontalAlignment:enum'
-          - name: OverlayType
-            uid: 'visio!Visio.OverlayType:enum'
-          - name: OverlayVerticalAlignment
-            uid: 'visio!Visio.OverlayVerticalAlignment:enum'
           - name: Page
             uid: 'visio!Visio.Page:class'
           - name: PageCollection
@@ -68,8 +73,6 @@ items:
             uid: 'visio!Visio.ShapeMouseLeaveEventArgs:interface'
           - name: ShapeView
             uid: 'visio!Visio.ShapeView:class'
-          - name: ToolBarType
-            uid: 'visio!Visio.ToolBarType:enum'
       - name: 通用 API
         uid: office!
         items:
@@ -162,15 +165,15 @@ items:
                 uid: 'office!Office.CustomXmlParts:interface'
               - name: CustomXmlPrefixMappings
                 uid: 'office!Office.CustomXmlPrefixMappings:interface'
-              - name: Dialog
+              - name: 对话框
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -238,7 +241,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
