commit translated contents

--- a/docs/docs-ref-autogen/outlook/outlook/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.appointmentread.yml
@@ -1049,6 +1049,8 @@ items:
     summary: |-
       获取共享文件夹、日历或邮箱中的约会或邮件的属性。
 
+      **注意**： Mac、IOS 或 Android 上的 Outlook 中不支持此方法。
+
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
@@ -1077,6 +1079,8 @@ items:
   - uid: 'outlook!Office.AppointmentRead#getSharedPropertiesAsync:member(2)'
     summary: |-
       获取共享文件夹、日历或邮箱中的约会或邮件的属性。
+
+      **注意**： Mac、IOS 或 Android 上的 Outlook 中不支持此方法。
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
