--- a/docs/docs-ref-autogen/outlook_1_1/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/outlook/office.appointmentcompose.yml
@@ -44,6 +44,8 @@ items:
 
       随后可以将该标识符与 removeAttachmentAsync 方法一起使用，以删除同一个会话中的附件。
 
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个`Authorization: Bearer`错误，该错误会错误地将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用由`addFileAttachmentFromBase64`要求集1.8 引入的 API。
+
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadWriteItem
@@ -112,6 +114,8 @@ items:
       AddFileAttachmentAsync 方法在指定的 URI 处上载文件，并将其附加到撰写窗体中的项目。
 
       随后可以将该标识符与 removeAttachmentAsync 方法一起使用，以删除同一个会话中的附件。
+
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个`Authorization: Bearer`错误，该错误会错误地将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用由`addFileAttachmentFromBase64`要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
