--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.customproperties.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.customproperties.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'outlook!Office.CustomProperties:interface'
     summary: |-
-      CustomProperties 对象表示特定于特定项目的自定义属性，以及特定于 Outlook 邮件外接程序的自定义属性。 例如，邮件外接程序可能有必要保存一些特定于激活外接程序的当前电子邮件的数据。 如果用户以后再次访问相同的邮件，并再次激活邮件外接程序，外接程序将能够检索作为自定义属性保存的数据。
+      CustomProperties 对象表示特定于特定项目的自定义属性，以及特定于 Outlook 邮件外接程序的自定义属性。 例如，邮件外接程序可能有必要保存一些特定于激活外接程序的当前电子邮件的数据。 如果用户以后再次访问相同的邮件，并再次激活邮件外接程序，外接程序将能够检索作为自定义属性保存的数据。 **重要说明**： CustomProperties JSON 对象的最大长度为2500个字符。
 
       由于 Mac 上的 Outlook 不缓存自定义属性，因此如果用户的网络出现故障，邮件外接程序将无法访问其自定义属性。
     remarks: |-
