--- a/docs/docs-ref-autogen/outlook_1_7/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/toc.yml
@@ -32,6 +32,8 @@ items:
                 uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
               - name: Office.mailboxenums.restversion
                 uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
+              - name: SourceProperty
+                uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
               - name: WeekNumber
                 uid: 'outlook!Office.MailboxEnums.WeekNumber:enum'
           - name: AppointmentCompose
@@ -66,7 +68,7 @@ items:
             uid: 'outlook!Office.LocalClientTime:interface'
           - name: 位置
             uid: 'outlook!Office.Location:interface'
-          - name: Mailbox
+          - name: 邮箱
             uid: 'outlook!Office.Mailbox:interface'
           - name: MeetingSuggestion
             uid: 'outlook!Office.MeetingSuggestion:interface'
@@ -82,7 +84,7 @@ items:
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: Recipients
+          - name: 收件人
             uid: 'outlook!Office.Recipients:interface'
           - name: RecipientsChangedEventArgs
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
@@ -104,8 +106,6 @@ items:
             uid: 'outlook!Office.RoamingSettings:interface'
           - name: SeriesTime
             uid: 'outlook!Office.SeriesTime:interface'
-          - name: SourceProperty
-            uid: 'outlook!Office.SourceProperty:enum'
           - name: Subject
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
@@ -254,7 +254,7 @@ items:
                 uid: 'office!Office.SetBindingDataOptions:interface'
               - name: SetSelectedDataOptions
                 uid: 'office!Office.SetSelectedDataOptions:interface'
-              - name: Settings
+              - name: 设置
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
