--- a/docs/docs-ref-autogen/outlook_1_8/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/toc.yml
@@ -42,6 +42,8 @@ items:
                 uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
               - name: Office.mailboxenums.restversion
                 uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
+              - name: SourceProperty
+                uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
               - name: WeekNumber
                 uid: 'outlook!Office.MailboxEnums.WeekNumber:enum'
           - name: AppointmentCompose
@@ -94,7 +96,7 @@ items:
             uid: 'outlook!Office.LocationDetails:interface'
           - name: LocationIdentifier
             uid: 'outlook!Office.LocationIdentifier:interface'
-          - name: Mailbox
+          - name: 邮箱
             uid: 'outlook!Office.Mailbox:interface'
           - name: MasterCategories
             uid: 'outlook!Office.MasterCategories:interface'
@@ -112,7 +114,7 @@ items:
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: Recipients
+          - name: 收件人
             uid: 'outlook!Office.Recipients:interface'
           - name: RecipientsChangedEventArgs
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
@@ -136,8 +138,6 @@ items:
             uid: 'outlook!Office.SeriesTime:interface'
           - name: SharedProperties
             uid: 'outlook!Office.SharedProperties:interface'
-          - name: SourceProperty
-            uid: 'outlook!Office.SourceProperty:enum'
           - name: Subject
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
@@ -286,7 +286,7 @@ items:
                 uid: 'office!Office.SetBindingDataOptions:interface'
               - name: SetSelectedDataOptions
                 uid: 'office!Office.SetSelectedDataOptions:interface'
-              - name: Settings
+              - name: 设置
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
