--- a/docs/docs-ref-autogen/outlook/toc.yml
+++ b/docs/docs-ref-autogen/outlook/toc.yml
@@ -42,6 +42,8 @@ items:
                 uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
               - name: Office.mailboxenums.restversion
                 uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
+              - name: SourceProperty
+                uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
               - name: WeekNumber
                 uid: 'outlook!Office.MailboxEnums.WeekNumber:enum'
           - name: AppointmentCompose
@@ -64,7 +66,7 @@ items:
             uid: 'outlook!Office.CategoryDetails:interface'
           - name: CoercionTypeOptions
             uid: 'outlook!Office.CoercionTypeOptions:interface'
-          - name: 联系人
+          - name: Contact
             uid: 'outlook!Office.Contact:interface'
           - name: CustomProperties
             uid: 'outlook!Office.CustomProperties:interface'
@@ -84,7 +86,7 @@ items:
             uid: 'outlook!Office.From:interface'
           - name: InternetHeaders
             uid: 'outlook!Office.InternetHeaders:interface'
-          - name: 项目
+          - name: Item
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -110,7 +112,7 @@ items:
             uid: 'outlook!Office.NotificationMessages:interface'
           - name: OfficeThemeChangedEventArgs
             uid: 'outlook!Office.OfficeThemeChangedEventArgs:interface'
-          - name: Organizer
+          - name: 组织者
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
@@ -138,8 +140,6 @@ items:
             uid: 'outlook!Office.SeriesTime:interface'
           - name: SharedProperties
             uid: 'outlook!Office.SharedProperties:interface'
-          - name: SourceProperty
-            uid: 'outlook!Office.SourceProperty:enum'
           - name: Subject
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
@@ -240,15 +240,15 @@ items:
                 uid: 'office!Office.CustomXmlParts:interface'
               - name: CustomXmlPrefixMappings
                 uid: 'office!Office.CustomXmlPrefixMappings:interface'
-              - name: Dialog
+              - name: 对话框
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -316,7 +316,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
