--- a/docs/docs-ref-autogen/outlook_1_3/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/outlook/office.mailbox.yml
@@ -496,16 +496,16 @@ items:
             - any
   - uid: 'outlook!Office.Mailbox#item:member'
     summary: |-
-      邮箱项目。 根据在其中打开外接的上下文，该项目可以是任意数量的类型。 如果要仅查看特定类型的 IntelliSense，请将此项转换为以下项之一：
+      邮箱项目。 根据在其中打开加载项的上下文，项目类型可能会有所不同。 如果要仅查看特定类型或模式的 IntelliSense，请将此项目转换为以下项之一：
 
-      [ItemCompose](xref:outlook!Office.ItemCompose:interface)<!-- -->， [ItemRead](xref:outlook!Office.ItemRead:interface)<!-- -->， [MessageCompose](xref:outlook!Office.MessageCompose:interface)<!-- -->， [Messageread.html](xref:outlook!Office.MessageRead:interface)<!-- -->， [AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)<!-- -->， [AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
+      [ItemCompose](xref:outlook!Office.ItemCompose:interface)<!-- -->， [ItemRead](xref:outlook!Office.ItemRead:interface)<!-- -->、[邮件](xref:outlook!Office.Message:interface)<!-- -->、[约会](xref:outlook!Office.Appointment:interface)<!-- -->， [MessageCompose](xref:outlook!Office.MessageCompose:interface)<!-- -->， [Messageread.html](xref:outlook!Office.MessageRead:interface)<!-- -->， [AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)<!-- -->， [AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
     name: item
     fullName: item
     langs:
       - typeScript
     type: property
     syntax:
-      content: 'item: Item & ItemCompose & ItemRead & MessageRead & MessageCompose & AppointmentRead & AppointmentCompose;'
+      content: 'item: Item & ItemCompose & ItemRead & Message & MessageCompose & MessageRead & Appointment & AppointmentCompose & AppointmentRead;'
       return:
         type:
           - 'outlook!Office.Mailbox#item~0:complex'
@@ -677,8 +677,8 @@ references:
       - name: <string>) => void
         fullName: <string>) => void
   - uid: 'outlook!Office.Mailbox#item~0:complex'
-    name: Item & ItemCompose & ItemRead & MessageRead & MessageCompose & AppointmentRead & AppointmentCompose
-    fullName: Office.Item & Office.ItemCompose & Office.ItemRead & Office.MessageRead & Office.MessageCompose & Office.AppointmentRead & Office.AppointmentCompose
+    name: Item & ItemCompose & ItemRead & Message & MessageCompose & MessageRead & Appointment & AppointmentCompose & AppointmentRead
+    fullName: Office.Item & Office.ItemCompose & Office.ItemRead & Office.Message & Office.MessageCompose & Office.MessageRead & Office.Appointment & Office.AppointmentCompose & Office.AppointmentRead
     spec.typeScript:
       - uid: 'outlook!Office.Item:interface'
         name: Item
@@ -695,9 +695,9 @@ references:
         fullName: Office.ItemRead
       - name: ' & '
         fullName: ' & '
-      - uid: 'outlook!Office.MessageRead:interface'
-        name: MessageRead
-        fullName: Office.MessageRead
+      - uid: 'outlook!Office.Message:interface'
+        name: Message
+        fullName: Office.Message
       - name: ' & '
         fullName: ' & '
       - uid: 'outlook!Office.MessageCompose:interface'
@@ -705,14 +705,24 @@ references:
         fullName: Office.MessageCompose
       - name: ' & '
         fullName: ' & '
-      - uid: 'outlook!Office.AppointmentRead:interface'
-        name: AppointmentRead
-        fullName: Office.AppointmentRead
+      - uid: 'outlook!Office.MessageRead:interface'
+        name: MessageRead
+        fullName: Office.MessageRead
+      - name: ' & '
+        fullName: ' & '
+      - uid: 'outlook!Office.Appointment:interface'
+        name: Appointment
+        fullName: Office.Appointment
       - name: ' & '
         fullName: ' & '
       - uid: 'outlook!Office.AppointmentCompose:interface'
         name: AppointmentCompose
         fullName: Office.AppointmentCompose
+      - name: ' & '
+        fullName: ' & '
+      - uid: 'outlook!Office.AppointmentRead:interface'
+        name: AppointmentRead
+        fullName: Office.AppointmentRead
   - uid: 'outlook!Office.Mailbox#makeEwsRequestAsync~0:complex'
     name: '(asyncResult: Office.AsyncResult<string>) => void'
     fullName: '(asyncResult: Office.AsyncResult<string>) => void'
