--- a/docs/docs-ref-autogen/outlook_1_5/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/toc.yml
@@ -24,6 +24,8 @@ items:
                 uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
               - name: Office.mailboxenums.restversion
                 uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
+              - name: SourceProperty
+                uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
           - name: AppointmentCompose
             uid: 'outlook!Office.AppointmentCompose:interface'
           - name: AppointmentRead
@@ -34,7 +36,7 @@ items:
             uid: 'outlook!Office.Body:interface'
           - name: CoercionTypeOptions
             uid: 'outlook!Office.CoercionTypeOptions:interface'
-          - name: 联系人
+          - name: Contact
             uid: 'outlook!Office.Contact:interface'
           - name: CustomProperties
             uid: 'outlook!Office.CustomProperties:interface'
@@ -46,7 +48,7 @@ items:
             uid: 'outlook!Office.EmailUser:interface'
           - name: 实体
             uid: 'outlook!Office.Entities:interface'
-          - name: 项目
+          - name: Item
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -74,8 +76,6 @@ items:
             uid: 'outlook!Office.ReplyFormData:interface'
           - name: RoamingSettings
             uid: 'outlook!Office.RoamingSettings:interface'
-          - name: SourceProperty
-            uid: 'outlook!Office.SourceProperty:enum'
           - name: Subject
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
@@ -176,15 +176,15 @@ items:
                 uid: 'office!Office.CustomXmlParts:interface'
               - name: CustomXmlPrefixMappings
                 uid: 'office!Office.CustomXmlPrefixMappings:interface'
-              - name: Dialog
+              - name: 对话框
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -252,7 +252,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
