commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttitleupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
-    summary: '<span data-ttu-id="8294c-101">一个用于更新 ChartTitle 对象上的数据的接口，可用于`chartTitle.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="8294c-101">An interface for updating data on the ChartTitle object, for use in `chartTitle.set({ ... })`</span></span><!-- --><span data-ttu-id="8294c-102">.</span><span class="sxs-lookup"><span data-stu-id="8294c-102"></span></span>'
+    summary: '一个用于更新 ChartTitle 对象上的数据的接口，可用于`chartTitle.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartTitleUpdateData
     fullName: Excel.Interfaces.ChartTitleUpdateData
     langs:
@@ -22,9 +22,9 @@ items:
       - 'excel!Excel.Interfaces.ChartTitleUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="8294c-103">表示图表标题的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="8294c-103">Represents the formatting of a chart title, which includes fill and font formatting.</span></span>
+      表示图表标题的格式，包括填充和字体格式。
 
-      <span data-ttu-id="8294c-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="8294c-105">表示图表标题水平对齐。</span><span class="sxs-lookup"><span data-stu-id="8294c-105">Represents the horizontal alignment for chart title.</span></span>
+      表示图表标题水平对齐。
 
-      <span data-ttu-id="8294c-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleUpdateData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="8294c-107">表示图表标题左边缘到图表区域左边缘的距离，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="8294c-107">Represents the distance, in points, from the left edge of chart title to the left edge of chart area.</span></span> <span data-ttu-id="8294c-108">如果图表标题不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="8294c-108">Null if chart title is not visible.</span></span>
+      表示图表标题左边缘到图表区域左边缘的距离，以磅为单位。 如果图表标题不可见，则为 Null。
 
-      <span data-ttu-id="8294c-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -67,9 +67,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#overlay:member'
     summary: |-
-      <span data-ttu-id="8294c-110">表示图表标题是否将叠加在图表上的布尔值。</span><span class="sxs-lookup"><span data-stu-id="8294c-110">Boolean value representing if the chart title will overlay the chart or not.</span></span>
+      表示图表标题是否将叠加在图表上的布尔值。
 
-      <span data-ttu-id="8294c-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -82,9 +82,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="8294c-112">表示图表标题的位置。</span><span class="sxs-lookup"><span data-stu-id="8294c-112">Represents the position of chart title.</span></span> <span data-ttu-id="8294c-113">有关详细信息，请参阅 ChartTitlePosition。</span><span class="sxs-lookup"><span data-stu-id="8294c-113">See Excel.ChartTitlePosition for details.</span></span>
+      表示图表标题的位置。 有关详细信息，请参阅 ChartTitlePosition。
 
-      <span data-ttu-id="8294c-114">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -97,9 +97,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleUpdateData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#showShadow:member'
     summary: |-
-      <span data-ttu-id="8294c-115">表示一个布尔值，用于确定图表标题是否具有阴影。</span><span class="sxs-lookup"><span data-stu-id="8294c-115">Represents a boolean value that determines if the chart title has a shadow.</span></span>
+      表示一个布尔值，用于确定图表标题是否具有阴影。
 
-      <span data-ttu-id="8294c-116">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-116">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
     fullName: showShadow
     langs:
@@ -112,9 +112,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#text:member'
     summary: |-
-      <span data-ttu-id="8294c-117">表示图表的标题文本。</span><span class="sxs-lookup"><span data-stu-id="8294c-117">Represents the title text of a chart.</span></span>
+      表示图表的标题文本。
 
-      <span data-ttu-id="8294c-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -127,9 +127,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#textOrientation:member'
     summary: |-
-      <span data-ttu-id="8294c-119">表示图表标题的文本方向。</span><span class="sxs-lookup"><span data-stu-id="8294c-119">Represents the text orientation of chart title.</span></span> <span data-ttu-id="8294c-120">此值应是 -90 到 90 或 180（垂直文本）之间的整数。</span><span class="sxs-lookup"><span data-stu-id="8294c-120">The value should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span>
+      表示文本面向图表标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
 
-      <span data-ttu-id="8294c-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -142,9 +142,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="8294c-122">表示图表标题上边缘到图表区域顶部的距离，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="8294c-122">Represents the distance, in points, from the top edge of chart title to the top of chart area.</span></span> <span data-ttu-id="8294c-123">如果图表标题不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="8294c-123">Null if chart title is not visible.</span></span>
+      表示图表标题上边缘到图表区域顶部的距离，以磅为单位。 如果图表标题不可见，则为 Null。
 
-      <span data-ttu-id="8294c-124">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -157,9 +157,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="8294c-125">表示图表标题垂直对齐。</span><span class="sxs-lookup"><span data-stu-id="8294c-125">Represents the vertical alignment of chart title.</span></span> <span data-ttu-id="8294c-126">有关详细信息，请参阅 ChartTextVerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="8294c-126">See Excel.ChartTextVerticalAlignment for details.</span></span>
+      表示图表标题垂直对齐。 有关详细信息，请参阅 ChartTextVerticalAlignment。
 
-      <span data-ttu-id="8294c-127">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -172,9 +172,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleUpdateData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="8294c-128">表示图表标题对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="8294c-128">A boolean value the represents the visibility of a chart title object.</span></span>
+      表示图表标题对象是否可见的布尔值。
 
-      <span data-ttu-id="8294c-129">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8294c-129">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
