--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.textframeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.textframeloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="1bf2c-101">代表 shape 对象的文本框架。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-101">Represents the text frame of a shape object.</span></span>
+      代表 shape 对象的文本框架。
 
-      <span data-ttu-id="1bf2c-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TextFrameLoadOptions
     fullName: Excel.Interfaces.TextFrameLoadOptions
     langs:
@@ -27,7 +27,7 @@ items:
       - 'excel!Excel.Interfaces.TextFrameLoadOptions#verticalAlignment:member'
       - 'excel!Excel.Interfaces.TextFrameLoadOptions#verticalOverflow:member'
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#$all:member'
-    summary: '<span data-ttu-id="1bf2c-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="1bf2c-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="1bf2c-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="1bf2c-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="1bf2c-105">).</span><span class="sxs-lookup"><span data-stu-id="1bf2c-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -40,9 +40,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#autoSizeSetting:member'
     summary: |-
-      <span data-ttu-id="1bf2c-106">获取或设置文本框的自动调整大小设置。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-106">Gets or sets the automatic sizing settings for the text frame.</span></span> <span data-ttu-id="1bf2c-107">可以将文本框设置为自动调整文本大小以适应文本框，或自动调整文本框大小以适应文本，或者不使用自动调整大小设置。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-107">A text frame can be set to automatically fit the text to the text frame, to automatically fit the text frame to the text, or not perform any automatic sizing.</span></span>
+      获取或设置文本框的自动调整大小设置。 可以将文本框设置为自动调整文本大小以适应文本框，或自动调整文本框大小以适应文本，或者不使用自动调整大小设置。
 
-      <span data-ttu-id="1bf2c-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoSizeSetting
     fullName: autoSizeSetting
     langs:
@@ -55,9 +55,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#bottomMargin:member'
     summary: |-
-      <span data-ttu-id="1bf2c-109">表示文本框的下边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-109">Represents the bottom margin, in points, of the text frame.</span></span>
+      表示文本框的下边距（以磅为单位）。
 
-      <span data-ttu-id="1bf2c-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bottomMargin
     fullName: bottomMargin
     langs:
@@ -70,9 +70,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#hasText:member'
     summary: |-
-      <span data-ttu-id="1bf2c-111">指定文本框是否包含文本。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-111">Specifies whether the text frame contains text.</span></span>
+      指定文本框是否包含文本。
 
-      <span data-ttu-id="1bf2c-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasText
     fullName: hasText
     langs:
@@ -85,9 +85,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="1bf2c-113">表示文本框的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-113">Represents the horizontal alignment of the text frame.</span></span> <span data-ttu-id="1bf2c-114">有关详细信息，请参阅 Excel.ShapeTextHorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-114">See Excel.ShapeTextHorizontalAlignment for details.</span></span>
+      表示文本框的水平对齐方式。 有关详细信息，请参阅 Excel.ShapeTextHorizontalAlignment。
 
-      <span data-ttu-id="1bf2c-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -100,9 +100,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#horizontalOverflow:member'
     summary: |-
-      <span data-ttu-id="1bf2c-116">表示文本框的水平溢出行为。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-116">Represents the horizontal overflow behavior of the text frame.</span></span> <span data-ttu-id="1bf2c-117">有关详细信息，请参阅 Excel.ShapeTextHorizontalOverflow。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-117">See Excel.ShapeTextHorizontalOverflow for details.</span></span>
+      表示文本框的水平溢出行为。 有关详细信息，请参阅 Excel.ShapeTextHorizontalOverflow。
 
-      <span data-ttu-id="1bf2c-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalOverflow
     fullName: horizontalOverflow
     langs:
@@ -115,9 +115,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#leftMargin:member'
     summary: |-
-      <span data-ttu-id="1bf2c-119">表示文本框的左边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-119">Represents the left margin, in points, of the text frame.</span></span>
+      表示文本框的左边距（以磅为单位）。
 
-      <span data-ttu-id="1bf2c-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftMargin
     fullName: leftMargin
     langs:
@@ -130,9 +130,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#orientation:member'
     summary: |-
-      <span data-ttu-id="1bf2c-121">表示文本框的文本方向。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-121">Represents the text orientation of the text frame.</span></span> <span data-ttu-id="1bf2c-122">有关详细信息，请参阅 Excel.ShapeTextOrientation。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-122">See Excel.ShapeTextOrientation for details.</span></span>
+      表示文本在文本框架中定向到的角度。 有关详细信息，请参阅 Excel.ShapeTextOrientation。
 
-      <span data-ttu-id="1bf2c-123">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-123">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: orientation
     fullName: orientation
     langs:
@@ -145,9 +145,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#readingOrder:member'
     summary: |-
-      <span data-ttu-id="1bf2c-124">表示文本框从左到右或从右到左的读取顺序。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-124">Represents the reading order of the text frame, either left-to-right or right-to-left.</span></span> <span data-ttu-id="1bf2c-125">有关详细信息，请参阅 Excel.ShapeTextReadingOrder。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-125">See Excel.ShapeTextReadingOrder for details.</span></span>
+      表示文本框从左到右或从右到左的读取顺序。 有关详细信息，请参阅 Excel.ShapeTextReadingOrder。
 
-      <span data-ttu-id="1bf2c-126">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-126">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -160,9 +160,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#rightMargin:member'
     summary: |-
-      <span data-ttu-id="1bf2c-127">表示文本框的右边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-127">Represents the right margin, in points, of the text frame.</span></span>
+      表示文本框的右边距（以磅为单位）。
 
-      <span data-ttu-id="1bf2c-128">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightMargin
     fullName: rightMargin
     langs:
@@ -175,9 +175,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#textRange:member'
     summary: |-
-      <span data-ttu-id="1bf2c-129">表示附加到文本框中形状上的文本，以及用于操作文本的属性和方法。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-129">Represents the text that is attached to a shape in the text frame, and properties and methods for manipulating the text.</span></span> <span data-ttu-id="1bf2c-130">有关详细信息，请参阅 Excel.TextRange。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-130">See Excel.TextRange for details.</span></span>
+      表示附加到文本框中形状上的文本，以及用于操作文本的属性和方法。 有关详细信息，请参阅 Excel.TextRange。
 
-      <span data-ttu-id="1bf2c-131">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-131">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textRange
     fullName: textRange
     langs:
@@ -190,9 +190,9 @@ items:
           - 'excel!Excel.Interfaces.TextRangeLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#topMargin:member'
     summary: |-
-      <span data-ttu-id="1bf2c-132">表示文本框的上边距（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-132">Represents the top margin, in points, of the text frame.</span></span>
+      表示文本框的上边距（以磅为单位）。
 
-      <span data-ttu-id="1bf2c-133">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-133">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: topMargin
     fullName: topMargin
     langs:
@@ -205,9 +205,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="1bf2c-134">表示文本框的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-134">Represents the vertical alignment of the text frame.</span></span> <span data-ttu-id="1bf2c-135">有关详细信息，请参阅 Excel.ShapeTextVerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-135">See Excel.ShapeTextVerticalAlignment for details.</span></span>
+      表示文本框的垂直对齐方式。 有关详细信息，请参阅 Excel.ShapeTextVerticalAlignment。
 
-      <span data-ttu-id="1bf2c-136">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-136">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -220,9 +220,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions#verticalOverflow:member'
     summary: |-
-      <span data-ttu-id="1bf2c-137">表示文本框的垂直溢出行为。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-137">Represents the vertical overflow behavior of the text frame.</span></span> <span data-ttu-id="1bf2c-138">有关详细信息，请参阅 Excel.ShapeTextVerticalOverflow。</span><span class="sxs-lookup"><span data-stu-id="1bf2c-138">See Excel.ShapeTextVerticalOverflow for details.</span></span>
+      表示文本框的垂直溢出行为。 有关详细信息，请参阅 Excel.ShapeTextVerticalOverflow。
 
-      <span data-ttu-id="1bf2c-139">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1bf2c-139">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalOverflow
     fullName: verticalOverflow
     langs:
