--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.pivottablecollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.pivottablecollection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.PivotTableCollection:class'
     summary: |-
-      <span data-ttu-id="d2bec-101">表示属于工作簿或工作表的所有 PivotTable 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="d2bec-101">Represents a collection of all the PivotTables that are part of the workbook or worksheet.</span></span>
+      表示属于工作簿或工作表的所有 PivotTable 对象的集合。
 
-      <span data-ttu-id="d2bec-102">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2bec-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotTableCollection
     fullName: Excel.PivotTableCollection
     langs:
@@ -27,9 +27,9 @@ items:
       - 'excel!Excel.PivotTableCollection#toJSON:member(1)'
   - uid: 'excel!Excel.PivotTableCollection#add:member(1)'
     summary: |-
-      <span data-ttu-id="d2bec-103">基于指定的数据源添加数据透视表，并将其插入到目标区域的左上单元格。</span><span class="sxs-lookup"><span data-stu-id="d2bec-103">Add a Pivottable based on the specified source data and insert it at the top left cell of the destination range.</span></span>
+      根据指定的源数据添加数据透视表，并将其插入到目标区域左上角的单元格处。
 
-      <span data-ttu-id="d2bec-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2bec-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'add(name, source, destination)'
     fullName: 'add(name, source, destination)'
     langs:
@@ -41,9 +41,9 @@ items:
         type:
           - 'excel!Excel.PivotTable:class'
         description: |-
-          <span data-ttu-id="d2bec-105">返回新插入的数据透视表。</span><span class="sxs-lookup"><span data-stu-id="d2bec-105">Returns the newly inserted PivotTable.</span></span>
+          返回新插入的数据透视表。
 
-          #### <a name="examples"></a><span data-ttu-id="d2bec-106">示例</span><span class="sxs-lookup"><span data-stu-id="d2bec-106">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```typescript
           await Excel.run(async (context) => {
@@ -56,19 +56,19 @@ items:
           ```
       parameters:
         - id: name
-          description: <span data-ttu-id="d2bec-107">新数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="d2bec-107">The name of the new PivotTable.</span></span>
+          description: 新数据透视表的名称。
           type:
             - string
         - id: source
-          description: '<span data-ttu-id="d2bec-108">新数据透视表的源数据，可以是区域（或包含工作表名称的字符串地址）或表。</span><span class="sxs-lookup"><span data-stu-id="d2bec-108">The source data for the new PivotTable, this can either be a range (or string address including the worksheet name) or a table.</span></span>'
+          description: 新数据透视表的源数据，可以是区域（或包含工作表名称的字符串地址）或表。
           type:
             - 'excel!Excel.PivotTableCollection#add~0:complex'
         - id: destination
-          description: <span data-ttu-id="d2bec-109">数据透视表目标区域（工作表中用于放置所生成的报表的区域）左上角的单元格。</span><span class="sxs-lookup"><span data-stu-id="d2bec-109">The cell in the upper-left corner of the PivotTable report's destination range (the range on the worksheet where the resulting report will be placed).</span></span>
+          description: 数据透视表目标区域（工作表中用于放置所生成的报表的区域）左上角的单元格。
           type:
             - 'excel!Excel.PivotTableCollection#add~1:complex'
   - uid: 'excel!Excel.PivotTableCollection#context:member'
-    summary: <span data-ttu-id="d2bec-110">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="d2bec-110">The request context associated with the object.</span></span> <span data-ttu-id="d2bec-111">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="d2bec-111">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -81,9 +81,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.PivotTableCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="d2bec-112">获取集合中的数据透视表的数量。</span><span class="sxs-lookup"><span data-stu-id="d2bec-112">Gets the number of pivot tables in the collection.</span></span>
+      获取集合中的数据透视表的数量。
 
-      <span data-ttu-id="d2bec-113">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2bec-113">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -97,9 +97,9 @@ items:
         description: ''
   - uid: 'excel!Excel.PivotTableCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="d2bec-114">按名称获取 PivotTable 对象。</span><span class="sxs-lookup"><span data-stu-id="d2bec-114">Gets a PivotTable by name.</span></span>
+      按名称获取 PivotTable 对象。
 
-      <span data-ttu-id="d2bec-115">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2bec-115">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(name)
     fullName: getItem(name)
     langs:
@@ -113,14 +113,14 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="d2bec-116">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="d2bec-116">Name of the PivotTable to be retrieved.</span></span>
+          description: 要检索的数据透视表的名称。
           type:
             - string
   - uid: 'excel!Excel.PivotTableCollection#getItemOrNullObject:member(1)'
     summary: |-
-      <span data-ttu-id="d2bec-117">按 PivotTable 对象的名称获取此对象。</span><span class="sxs-lookup"><span data-stu-id="d2bec-117">Gets a PivotTable by name.</span></span> <span data-ttu-id="d2bec-118">如果没有 PivotTable 对象，将返回 NULL 对象。</span><span class="sxs-lookup"><span data-stu-id="d2bec-118">If the PivotTable does not exist, will return a null object.</span></span>
+      按 PivotTable 对象的名称获取此对象。 如果没有 PivotTable 对象，将返回 NULL 对象。
 
-      <span data-ttu-id="d2bec-119">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2bec-119">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemOrNullObject(name)
     fullName: getItemOrNullObject(name)
     langs:
@@ -134,11 +134,11 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="d2bec-120">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="d2bec-120">Name of the PivotTable to be retrieved.</span></span>
+          description: 要检索的数据透视表的名称。
           type:
             - string
   - uid: 'excel!Excel.PivotTableCollection#items:member'
-    summary: <span data-ttu-id="d2bec-121">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="d2bec-121">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -150,7 +150,7 @@ items:
         type:
           - 'excel!Excel.PivotTableCollection#items~0:complex'
   - uid: 'excel!Excel.PivotTableCollection#load:member(1)'
-    summary: <span data-ttu-id="d2bec-122">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d2bec-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d2bec-123">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d2bec-123">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -164,11 +164,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="d2bec-124">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="d2bec-124">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.PivotTableCollection#load~0:complex'
   - uid: 'excel!Excel.PivotTableCollection#load:member(2)'
-    summary: <span data-ttu-id="d2bec-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d2bec-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d2bec-126">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d2bec-126">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -182,11 +182,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="d2bec-127">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="d2bec-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.PivotTableCollection#load:member(3)'
-    summary: <span data-ttu-id="d2bec-128">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d2bec-128">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d2bec-129">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d2bec-129">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -200,14 +200,14 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="d2bec-130">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="d2bec-130">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - 'excel!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.PivotTableCollection#refreshAll:member(1)'
     summary: |-
-      <span data-ttu-id="d2bec-131">刷新集合中的所有数据透视表。</span><span class="sxs-lookup"><span data-stu-id="d2bec-131">Refreshes all the pivot tables in the collection.</span></span>
+      刷新集合中的所有数据透视表。
 
-      <span data-ttu-id="d2bec-132">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2bec-132">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: refreshAll()
     fullName: refreshAll()
     langs:
@@ -220,7 +220,7 @@ items:
           - void
         description: ''
   - uid: 'excel!Excel.PivotTableCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="d2bec-133">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="d2bec-133">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="d2bec-134">.</span><span class="sxs-lookup"><span data-stu-id="d2bec-134"></span></span> <span data-ttu-id="d2bec-135">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="d2bec-135"></span></span><!-- --><span data-ttu-id="d2bec-136">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.PivotTableCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.PivotTableCollectionData`</span><span class="sxs-lookup"><span data-stu-id="d2bec-136">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.PivotTableCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PivotTableCollectionData`</span></span><!-- --><span data-ttu-id="d2bec-137">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="d2bec-137">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.PivotTableCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.PivotTableCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
