commit translated contents

--- a/docs/docs-ref-autogen/excel_1_10/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_10/toc.yml
@@ -27,12 +27,26 @@ items:
                     uid: 'office-runtime!OfficeRuntime.Auth:interface'
                   - name: AuthOptions
                     uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
+                  - name: 控制
+                    uid: 'office-runtime!OfficeRuntime.Control:interface'
                   - name: 对话框
                     uid: 'office-runtime!OfficeRuntime.Dialog:interface'
                   - name: DisplayWebDialogOptions
                     uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
+                  - name: 库
+                    uid: 'office-runtime!OfficeRuntime.Gallery:interface'
+                  - name: MenuControl
+                    uid: 'office-runtime!OfficeRuntime.MenuControl:interface'
+                  - name: 功能区
+                    uid: 'office-runtime!OfficeRuntime.Ribbon:interface'
+                  - name: RibbonUpdaterData
+                    uid: 'office-runtime!OfficeRuntime.RibbonUpdaterData:interface'
                   - name: 存储
                     uid: 'office-runtime!OfficeRuntime.Storage:interface'
+                  - name: Tab
+                    uid: 'office-runtime!OfficeRuntime.Tab:interface'
+                  - name: UI
+                    uid: 'office-runtime!OfficeRuntime.UI:interface'
           - name: 枚举
             uid: ''
             items:
@@ -617,7 +631,7 @@ items:
             uid: 'excel!Excel.Image:class'
           - name: IterativeCalculation
             uid: 'excel!Excel.IterativeCalculation:class'
-          - name: Line
+          - name: 折线图
             uid: 'excel!Excel.Line:class'
           - name: ListDataValidation
             uid: 'excel!Excel.ListDataValidation:interface'
@@ -717,7 +731,7 @@ items:
             uid: 'excel!Excel.SettableColumnProperties:interface'
           - name: SettableRowProperties
             uid: 'excel!Excel.SettableRowProperties:interface'
-          - name: Setting
+          - name: 设置
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
