--- a/docs/docs-ref-autogen/excel/office-runtime/officeruntime.dialog.yml
+++ b/docs/docs-ref-autogen/excel/office-runtime/officeruntime.dialog.yml
@@ -14,7 +14,7 @@ items:
     summary: |-
       用于关闭对话框的方法。 返回一个承诺。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: close()
     fullName: close()
     langs:
