--- a/docs/docs-ref-autogen/excel/office-runtime/officeruntime.storage.yml
+++ b/docs/docs-ref-autogen/excel/office-runtime/officeruntime.storage.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       异步、全局和永久的键-值存储。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     remarks: 每个域的存储限制为 10 MB，可由多个加载项共享。
     name: OfficeRuntime.Storage
     fullName: OfficeRuntime.Storage
@@ -24,7 +24,7 @@ items:
     summary: |-
       根据存储项从存储中检索项。 返回一个承诺。 在承诺未解决的情况下，返回 null。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -45,7 +45,7 @@ items:
     summary: |-
       根据存储的密钥从存储中检索多个项目。 返回一个承诺。 在承诺未解决的情况下，返回 null。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: getItems(keys)
     fullName: getItems(keys)
     langs:
@@ -66,7 +66,7 @@ items:
     summary: |-
       从存储中检索所有键的数组。 返回一个承诺。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: getKeys()
     fullName: getKeys()
     langs:
@@ -82,7 +82,7 @@ items:
     summary: |-
       基于项的项从存储区中移除项。 返回一个承诺。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: removeItem(key)
     fullName: removeItem(key)
     langs:
@@ -103,7 +103,7 @@ items:
     summary: |-
       从存储中删除多个项目。 返回一个承诺。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: removeItems(keys)
     fullName: removeItems(keys)
     langs:
@@ -124,7 +124,7 @@ items:
     summary: |-
       将键/值对设置为存储或更新现有的键值对。 返回一个承诺。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: 'setItem(key, value)'
     fullName: 'setItem(key, value)'
     langs:
@@ -149,7 +149,7 @@ items:
     summary: |-
       将多个项目设置为存储或更新存储中的多个项目。 返回一个承诺。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: setItems(keyValues)
     fullName: setItems(keyValues)
     langs:
