--- a/docs/docs-ref-autogen/excel_1_10/office-runtime/officeruntime.displaywebdialogoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/office-runtime/officeruntime.displaywebdialogoptions.yml
@@ -19,7 +19,7 @@ items:
     summary: |-
       用于确定对话框是显示为弹出窗口（false）还是在 IFrame 中显示的可选参数（true）。 此设置仅适用于在 Excel Online 上运行的自定义函数。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: displayInIFrame
     fullName: displayInIFrame
     langs:
@@ -34,7 +34,7 @@ items:
     summary: |-
       可选参数，用于定义对话框的高度，以当前显示的百分比形式表示。 例如，接受以下字符串： ' 50% '，' 50 '。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: height
     fullName: height
     langs:
@@ -49,7 +49,7 @@ items:
     summary: |-
       在对话框关闭时运行的可选回调。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: onClose
     fullName: onClose
     langs:
@@ -64,7 +64,7 @@ items:
     summary: |-
       当对话框向其父消息发送邮件时运行的可选回调。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: onMessage
     fullName: onMessage
     langs:
@@ -79,7 +79,7 @@ items:
     summary: |-
       当对话框发送错误时运行的可选回调。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: onRuntimeError
     fullName: onRuntimeError
     langs:
@@ -94,7 +94,7 @@ items:
     summary: |-
       可选参数，用于将对话框的宽度定义为窗口的百分比。 例如，接受以下字符串： ' 50% '，' 50 '。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: width
     fullName: width
     langs:
