--- a/docs/docs-ref-autogen/excel_1_9/office-runtime.yml
+++ b/docs/docs-ref-autogen/excel_1_9/office-runtime.yml
@@ -10,15 +10,22 @@ items:
       - 'office-runtime!OfficeRuntime.ApiInformation:interface'
       - 'office-runtime!OfficeRuntime.Auth:interface'
       - 'office-runtime!OfficeRuntime.AuthOptions:interface'
+      - 'office-runtime!OfficeRuntime.Control:interface'
       - 'office-runtime!OfficeRuntime.Dialog:interface'
       - 'office-runtime!OfficeRuntime.displayWebDialog:function(1)'
       - 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
+      - 'office-runtime!OfficeRuntime.Gallery:interface'
+      - 'office-runtime!OfficeRuntime.MenuControl:interface'
+      - 'office-runtime!OfficeRuntime.Ribbon:interface'
+      - 'office-runtime!OfficeRuntime.RibbonUpdaterData:interface'
       - 'office-runtime!OfficeRuntime.Storage:interface'
+      - 'office-runtime!OfficeRuntime.Tab:interface'
+      - 'office-runtime!OfficeRuntime.UI:interface'
   - uid: 'office-runtime!OfficeRuntime.displayWebDialog:function(1)'
     summary: |-
       启用 "弹出 web" 对话框的方法。
 
-      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+      \[[API 集： SharedRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: 'OfficeRuntime.displayWebDialog(url, options)'
     fullName: 'OfficeRuntime.displayWebDialog(url, options)'
     langs:
@@ -46,6 +53,8 @@ references:
     name: OfficeRuntime.Auth
   - uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
     name: OfficeRuntime.AuthOptions
+  - uid: 'office-runtime!OfficeRuntime.Control:interface'
+    name: OfficeRuntime.Control
   - uid: 'office-runtime!OfficeRuntime.Dialog:interface'
     name: OfficeRuntime.Dialog
   - uid: 'office-runtime!OfficeRuntime.displayWebDialog~0:complex'
@@ -64,5 +73,17 @@ references:
         fullName: '>'
   - uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
     name: DisplayWebDialogOptions
+  - uid: 'office-runtime!OfficeRuntime.Gallery:interface'
+    name: OfficeRuntime.Gallery
+  - uid: 'office-runtime!OfficeRuntime.MenuControl:interface'
+    name: OfficeRuntime.MenuControl
+  - uid: 'office-runtime!OfficeRuntime.Ribbon:interface'
+    name: OfficeRuntime.Ribbon
+  - uid: 'office-runtime!OfficeRuntime.RibbonUpdaterData:interface'
+    name: OfficeRuntime.RibbonUpdaterData
   - uid: 'office-runtime!OfficeRuntime.Storage:interface'
     name: OfficeRuntime.Storage
+  - uid: 'office-runtime!OfficeRuntime.Tab:interface'
+    name: OfficeRuntime.Tab
+  - uid: 'office-runtime!OfficeRuntime.UI:interface'
+    name: OfficeRuntime.UI
