--- a/docs/docs-ref-autogen/outlook/outlook/office.attachmentcontent.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.attachmentcontent.yml
@@ -36,9 +36,9 @@ items:
 
       对于文件附件，格式为 base64 编码的字符串。
 
-      对于表示邮件的项目附件，格式是一个字符串，表示一个 .eml 格式的文件。
+      对于表示邮件且通过拖放或 "附加项目" 附加的项目附件，该格式是一个字符串，表示一个 .eml 格式的文件。 **重要说明**：如果在 web 上的 Outlook 中通过拖放附加了邮件项，则`getAttachmentContentAsync`会引发错误。
 
-      对于表示日历项目的项目附件，格式是一个表示 icalendar 文件的字符串。
+      对于表示日历项目且通过拖放或 "附加项目" 附加的项目附件，该格式是一个代表 icalendar 文件的字符串。 **重要说明**：如果日历项目是通过 web 上的 Outlook 中的拖放附加的，则`getAttachmentContentAsync`会引发错误。
 
       对于云附件，格式为 URL 字符串。
     name: format
